--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN_SECRET: ${{ secrets.MY_GH_PAT }}
 
     steps:
       - name: Checkout repo
